# lib/api-spec/openapi.yaml
@@ -1003,6 +1003,14 @@ components:
           type: string
         location:
           type: string
+        city:
+          type: ["string", "null"]
+        address:
+          type: ["string", "null"]
+        phone:
+          type: ["string", "null"]
+        email:
+          type: ["string", "null"]
         type:
           type: string
         contractStart:
@@ -1043,6 +1051,14 @@ components:
           type: string
         location:
           type: string
+        city:
+          type: ["string", "null"]
+        address:
+          type: ["string", "null"]
+        phone:
+          type: ["string", "null"]
+        email:
+          type: ["string", "null"]
         type:
           type: string
         contractStart:
@@ -1073,6 +1089,14 @@ components:
         name:
           type: ["string", "null"]
         location:
+          type: ["string", "null"]
+        city:
+          type: ["string", "null"]
+        address:
+          type: ["string", "null"]
+        phone:
+          type: ["string", "null"]
+        email:
           type: ["string", "null"]
         type:
           type: ["string", "null"]
